test/tests/compiler/16_characters_and_strings/invalid_parse/extra_credit/string_literal_label.plx
# You can't use a string literal as a label
pub fn main(none) i32 {
    label "foo"
    return 0
}
